# tripleo-incubator

./: .gitignore  .gitreview  CONTRIBUTING.rst  Deploying.md  HACKING.rst  README  README.md  README.rst  chunk-heat  cloudprompt  devtest.md  localrc  neutron_notes.md  notes.md  other-requirements.txt  overcloudrc  overcloudrc-user  quantum_notes.md  resources.md  run-bashate.sh  seedrc  setup.cfg  start.sh  test-requirements.txt  tox.ini  tripleo-incubator.spec  tripleo-overcloud-passwords  troubleshooting.md  undercloudrc
bootstrap/: bootstrap.xml  configure-baremetal-network  configure-bootstrap-vm  configure-seed-vm  img-build-sudoers  make-bootstrap-image  seed.xml
config/: README.md
docs/: ci.md
environments/: README.md
image-config/: README.md
images/: baremetal-bootstrap.dia  baremetal-build-and-test-cycle.dia  baremetal-build-images.dia  baremetal-deploy.odp  baremetal-discovery.odp  nova-baremetal-deploy-process.dia  tripleo-concept.odp  tripleo-overview.dia
libvirt-templates/: libvirtxml.tmpl
presentations/: TripleO architecture overview.odp
quintupleo/: .gitignore  README.rst  build-nodes-json  openstack-bmc-servers.yaml  openstackbmc  quintupleo-env-example.yaml  quintupleo.yaml
scripts/: acquire-image  assert-admin-users  assert-user  assert-users  baremetal_ready.sh  bm-setup.sh  boot-elements  boot-seed-vm  build-image  build-images  chunk-heat  chunk-heat-overcloud.yaml  chunk_heat.py  cleanup-env  configure-brbm  configure-tripleo  configure-vm  create-baremetal-deploy-ramdisk.sh  create-baremetal-image.sh  create-certs  create-nodes  (+98 more)
(+91 files in other folders)
