[metadata]
name = tripleo-incubator
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Incubator for TripleO
description-file = 
	README.rst
home-page = http://git.openstack.org/cgit/openstack/tripleo-incubator
classifier = 
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
warnerrors = True
